tests/ui/parser/raw/raw-str-unterminated.stderr
error[E0748]: unterminated raw string
  --> $DIR/raw-str-unterminated.rs:2:5
   |
LL |     r#" string literal goes on
   |     ^ unterminated raw string
   |
   = note: this raw string should be terminated with `"#`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0748`.
