tests/ui/parser/raw/raw-str-unterminated.rs
static s: &'static str =
    r#" string literal goes on
        and on
    //~^^ ERROR unterminated raw string
